@@ -10,6 +10,7 @@
  *******************************************************************************/
 package org.sandbox.jdt.core.cleanupapp;
 
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -53,8 +54,9 @@ import org.eclipse.ltk.core.refactoring.Change;
 import org.eclipse.ltk.core.refactoring.RefactoringStatus;
 import org.eclipse.ltk.core.refactoring.RefactoringStatusEntry;
 
-import org.sandbox.jdt.cleanup.multifile.api.LineDelimiterPreserver;
 import org.sandbox.jdt.cleanup.multifile.api.IMultiFileCleanUpDiagnosticsProvider;
+import org.sandbox.jdt.cleanup.multifile.api.LineDelimiterPreserver;
+import org.sandbox.jdt.triggerpattern.git.UnifiedDiffFormatter;
 
 /**
  * Executes one cleanup refactoring over every source compilation unit of one
@@ -189,7 +191,7 @@ public final class ProjectWideCodeCleanupApplication implements IApplication {
 			e.printStackTrace(System.err);
 		}
 
-		if (arguments.patch() != null && !changed.isEmpty()) {
+		if (arguments.patch() != null) {
 			try {
 				writePatch(arguments.patch(), changed);
 			} catch (IOException e) {
@@ -447,25 +449,11 @@ public final class ProjectWideCodeCleanupApplication implements IApplication {
 
 	private static void writePatch(Path path, List<ChangedFile> changed) throws IOException {
 		createParent(path);
-		StringBuilder patch= new StringBuilder();
+		ByteArrayOutputStream patch= new ByteArrayOutputStream();
 		for (ChangedFile source : changed) {
-			String relative= source.relativePath();
-			String before= new String(source.before(), StandardCharsets.UTF_8);
-			String after= new String(source.after(), StandardCharsets.UTF_8);
-			patch.append("--- a/").append(relative).append('\n'); //$NON-NLS-1$
-			patch.append("+++ b/").append(relative).append('\n'); //$NON-NLS-1$
-			String[] beforeLines= before.split("\\R", -1); //$NON-NLS-1$
-			String[] afterLines= after.split("\\R", -1); //$NON-NLS-1$
-			patch.append("@@ -1,").append(beforeLines.length).append(" +1,") //$NON-NLS-1$ //$NON-NLS-2$
-					.append(afterLines.length).append(" @@\n"); //$NON-NLS-1$
-			for (String line : beforeLines) {
-				patch.append('-').append(line).append('\n');
-			}
-			for (String line : afterLines) {
-				patch.append('+').append(line).append('\n');
-			}
+			patch.writeBytes(UnifiedDiffFormatter.format(source.relativePath(), source.before(), source.after()));
 		}
-		Files.writeString(path, patch.toString(), StandardCharsets.UTF_8);
+		Files.write(path, patch.toByteArray());
 	}
 
 	private static void writeReport(Path path, Arguments arguments, Instant started, Instant ended,
